--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
       <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
 
 
-    <title>React App</title>
+    <title>Vi Task</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
